Add JSON serialization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,12 @@ endif()
 qt_add_executable(${PROJECT_NAME}
     application.qrc
     src/Main.cpp
+    src/JsonReader.h
+    src/JsonReader.inl
+    src/JsonReader.cpp
+    src/JsonWriter.h
+    src/JsonWriter.inl
+    src/JsonWriter.cpp
 )
 
 qt_add_resources(${PROJECT_NAME} "configuration"
