--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -41,4 +41,5 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
 )
 
 include(GoogleTest)
+set(CMAKE_GTEST_DISCOVER_TESTS_DISCOVERY_MODE PRE_TEST)
 gtest_discover_tests(${PROJECT_NAME})
