created template for cards and had a failed attempt at adding images

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,35 +1,21 @@
 cmake_minimum_required(VERSION 3.21.1)
 
-<<<<<<< HEAD
 project(lumen LANGUAGES CXX)
 
 # Set C++17 Standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-=======
-project(lumenApp LANGUAGES CXX)
->>>>>>> af28fad (Migrate from QtQuick Design Studio project to QtQuick project)
 
 # AUTOMOC must be set to ON (DO NOT CHANGE!!!)
 set(CMAKE_AUTOMOC ON)
 # Auto-embed resources in the target binary
 set(CMAKE_AUTORCC ON)
-
-<<<<<<< HEAD
-<<<<<<< HEAD
 find_package(Qt6 6.3 REQUIRED COMPONENTS Core Qml Quick)
-=======
-find_package(Qt6 6.2 REQUIRED COMPONENTS Core Qml Quick)
->>>>>>> af28fad (Migrate from QtQuick Design Studio project to QtQuick project)
-=======
-find_package(Qt6 6.2 REQUIRED COMPONENTS Core Qml Quick QuickControls2)
->>>>>>> b9ca6aa (changed CMake file to include Qt Quick Controls library)
 
 if (Qt6_VERSION VERSION_GREATER_EQUAL 6.3)
     qt_standard_project_setup()
 endif()
 
-<<<<<<< HEAD
 qt_add_executable(${PROJECT_NAME}
     application.qrc
     src/Main.cpp
@@ -58,10 +44,10 @@ qt_add_executable(${PROJECT_NAME}
     src/Models/CourseAttendance.cpp
     src/Controllers/UserConfController.h
     src/Controllers/UserConfController.cpp
+    src/Course.h
+    src/CourseModel.h
+    src/CourseModel.cpp
 )
-=======
-qt_add_executable(${PROJECT_NAME} src/Main.cpp)
->>>>>>> af28fad (Migrate from QtQuick Design Studio project to QtQuick project)
 
 qt_add_resources(${PROJECT_NAME} "configuration"
     PREFIX "/"
@@ -69,7 +55,6 @@ qt_add_resources(${PROJECT_NAME} "configuration"
         qtquickcontrols2.conf
 )
 
-<<<<<<< HEAD
 set_source_files_properties(qml/Constants.qml
     PROPERTIES
         QT_QML_SINGLETON_TYPE true
@@ -101,6 +86,8 @@ qt_add_qml_module(${CMAKE_PROJECT_NAME}
         qml/KPI.qml
         qml/LumenCard.qml
         qml/UserTabBar.qml
+        qml/CourseEditor.qml
+        qml/CardTemplate.qml
 )
 
 target_include_directories(${PROJECT_NAME}
@@ -108,13 +95,6 @@ target_include_directories(${PROJECT_NAME}
         "./src"
 )
 
-=======
-target_include_directories(${PROJECT_NAME}
-    PRIVATE
-        "./src"
-)
-
->>>>>>> af28fad (Migrate from QtQuick Design Studio project to QtQuick project)
 target_link_libraries(${PROJECT_NAME}
     PRIVATE
         Qt6::Core
