--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ qt_add_qml_module(${CMAKE_PROJECT_NAME}
         qml/EditorTabBar.qml
         qml/LumenTabButton.qml
         qml/PointingHandCursor.qml
+        qml/LumenRectangle.qml
 )
 
 target_include_directories(${PROJECT_NAME}
