--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,10 +20,11 @@ qt_add_executable(${PROJECT_NAME}
     application.qrc
     src/Main.cpp
     src/Course.h
-    qml/CourseEditor.qml
-    qml/CardTemplate.qml
     src/CourseModel.h
-    src/CourseModel.cpp)
+    src/CourseModel.cpp
+    src/InstructorModel.h
+    src/InstructorModel.cpp
+    src/Instructor.h)
 
 qt_add_resources(${PROJECT_NAME} "configuration"
     PREFIX "/"
@@ -46,6 +47,7 @@ qt_add_qml_module(${CMAKE_PROJECT_NAME}
         qml/CardTemplate.qml
         qml/CourseEditor.qml
         qml/LabeledComboBox.qml
+        qml/InstructorEditor.qml
 )
 
 target_include_directories(${PROJECT_NAME}
