created Location Model

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,10 @@ qt_add_executable(${PROJECT_NAME}
     src/CourseModel.cpp
     src/InstructorModel.h
     src/InstructorModel.cpp
-    src/Instructor.h)
+    src/Instructor.h
+    src/Location.h
+    src/LocationModel.h
+    src/LocationModel.cpp)
 
 qt_add_resources(${PROJECT_NAME} "configuration"
     PREFIX "/"
