--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,6 +91,8 @@ qt_add_qml_module(${CMAKE_PROJECT_NAME}
         qml/LumenCard.qml
         qml/UserTabBar.qml
         qml/CourseEditor.qml
+        qml/InstructorEditor.qml
+        qml/LocationEditor.qml
 )
 
 target_include_directories(${PROJECT_NAME}
