added location Editor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,7 @@ qt_add_qml_module(${CMAKE_PROJECT_NAME}
         qml/CourseEditor.qml
         qml/LabeledComboBox.qml
         qml/InstructorEditor.qml
+        qml/LocationEditor.qml
 )
 
 target_include_directories(${PROJECT_NAME}
