Set style accent

--- a/qtquickcontrols2.conf
+++ b/qtquickcontrols2.conf
@@ -7,7 +7,7 @@ Style=Material
 
 [Material]
 Theme=Light
-;Accent=BlueGrey
+Accent="#FCB80A"
 ;Primary=BlueGray
 ;Foreground=Brown
 ;Background=Grey
