integrated editor pages with repositories and made required edits

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,10 +22,6 @@ qt_add_executable(${PROJECT_NAME}
     src/Main.cpp
     src/Models/Location.h
     src/Models/Location.cpp
-    src/Models/Doctor.h
-    src/Models/Doctor.cpp
-    src/Models/TA.h
-    src/Models/TA.cpp
     src/Models/Course.h
     src/Models/Course.cpp
     src/Models/Lecture.h
@@ -47,10 +43,10 @@ qt_add_executable(${PROJECT_NAME}
     src/Controllers/UserConfController.cpp
     src/InstructorModel.h
     src/InstructorModel.cpp
-    src/Instructor.h
-    src/Location.h
     src/LocationModel.h
     src/LocationModel.cpp
+    src/Models/Instructor.h
+    src/Models/Instructor.cpp
 )
 
 qt_add_resources(${PROJECT_NAME} "configuration"
