Rework AddCourse backend code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,9 @@ qt_add_executable(${PROJECT_NAME}
     src/LocationModel.cpp
     src/Models/Instructor.h
     src/Models/Instructor.cpp
+    src/Controllers/CourseController.h
+    src/Controllers/CourseController.cpp
+    src/DTOs/CourseCreationDTO.h
 )
 
 qt_add_resources(${PROJECT_NAME} "configuration"
