Created optimized schedule class and optimized schedule model
Also linked the demo function that generates optimized schedules with the optimize schedule button

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,10 @@ qt_add_executable(${PROJECT_NAME}
     src/Controllers/LocationController.h
     src/Controllers/LocationController.cpp
     src/Controllers/InstructorController.h src/Controllers/InstructorController.cpp
+    src/Models/OptimizedSchedule.h
+    src/Views/OptimizedScheduleView.h
+    src/Models/OptimizedSchedule.cpp
+    src/Views/OptimizedScheduleView.cpp
 )
 
 qt_add_resources(${PROJECT_NAME} "configuration"
