--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,6 +96,7 @@ qt_add_qml_module(${CMAKE_PROJECT_NAME}
         qml/InstructorEditor.qml
         qml/LocationEditor.qml
         qml/CourseForm.qml
+        qml/EditorPage.qml
 )
 
 target_include_directories(${PROJECT_NAME}
